--- a/Walking_prototype/Assembly-CSharp.csproj
+++ b/Walking_prototype/Assembly-CSharp.csproj
@@ -56,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\circlescript.cs" />
+     <Compile Include="Assets\collision_detect.cs" />
+     <Compile Include="Assets\move_camera.cs" />
      <Compile Include="Assets\move_player.cs" />
      <Compile Include="Assets\squarescript.cs" />
  <Reference Include="UnityEngine">
