got spawn points to spawn enemy prefabs
going to have to go back through all the spawners though because I did not have the script added to any of the points :( this is only like 15 min of work but like :(
also further testing could be nice.

--- a/Walking_prototype/Assembly-CSharp.csproj
+++ b/Walking_prototype/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
      <Compile Include="Assets\circlescript.cs" />
      <Compile Include="Assets\collision_detect.cs" />
+     <Compile Include="Assets\enemies\spawn_enemies.cs" />
      <Compile Include="Assets\move_camera.cs" />
      <Compile Include="Assets\move_player.cs" />
      <Compile Include="Assets\squarescript.cs" />
